# ender-script

./: .gitignore  Cargo.toml  README.md  build.bat  grammar.md  grammar.txt  stdlib_snippets.txt  test.mcfunction
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  environment.rs  lib.rs
crates/esc/: Cargo.toml
crates/esc/src/: config.rs  init.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lib.rs  parser.rs  token.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: color.rs  cursor.rs  lib.rs  message.rs
examples/variables/: esconfig.json  main.es  variables.es
src/: colors.rs  compiler.rs  lexer.rs  lib.rs  message.rs  parser.rs  util.rs
test/: esconfig.json
tests/: test0.es  test1.es
