[package]
name = "esc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
compiler = { path = "../compiler" }
dialoguer = "0.10.0"

[dependencies.clap]
version = "3.1.8"
features = ["cargo"]